add floating point number support

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Calculator</h1>
   <div class="calculator">
     <div class="screen">
-      <div class="input">7+3=</div>
-      <div class="result">10</div>
+      <div class="input">&#128568;+&#127822;=</div>
+      <div class="result">&#128150;</div>
     </div>
     <div class="buttons">
       <button>0</button>
@@ -25,11 +25,13 @@
       <button>7</button>
       <button>8</button>
       <button>9</button>
+      <button>.</button>
       <button>+</button>
       <button>-</button>
       <button>*</button>
       <button>:</button>
       <button>=</button>
+      <button>Undo</button>
       <button>C</button>
     </div>
   </div>
